2010-04-15  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: For compatible with emacs-22.

	* dotemacs.sample: Edit dotemacs.sample.
	To Unix Lf.

2010-04-14  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Improve gud-break-or-remove and gud-enable-or-disable.
	("org"): Redefine org-mode key map.
	(fboundp): Fix nxml-mode bug.

2010-04-06  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Remove imenu bound(mouse3), use C-mouse3 instead.

2010-04-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Add indicate-buffer-boundaries.
	: Enable linum-mode in linux.

2010-03-29  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Bind S-f12 to semantic-mrub-switch-tags.

	* dotemacs.sample: Add.

2010-03-18  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Bind key to semantic-tag-folding-fold-block and
	semantic-tag-folding-show-block.
	: Bind S-f12 to pop-global-mark.

2010-03-17  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Rebind key for recent-jump.

2010-03-16  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Use drag-stuff instead of move-line-up and
	move-line-down.

2010-03-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable size-indication-mode.
	(program-common-function): Disable hs-minor-mode. cedet instead.
	: Bind right mouse to imenu.

	* lisp/company-0.5/*: Update company from 0.4.3 to 0.5

2010-03-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Don't active highlight-sysbol-mode in erc, occur,
	w3m mode.

	* init-site.el: Reset semantic-tag-folding key.

2010-03-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add cursor-chg.
	: Add highlight-parentheses.

	* init-site.el: Bind [M-S-f12] to
	semantic-analyze-proto-impl-toggle.
	: Bind "C-c SPC" to semantic-ia-complete-symbol-menu in
	window-system, or semantic-ia-complete-symbol in console.
	: Add (global-ede-mode 1).
	: Enable global-semantic-tag-folding-mode.
	: Set semantic-tag-folding key.
