@@ -1,3 +1,8 @@
+2010-04-16  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el (highlight-tail-mode): Disable highlight-tail-mode
+	in default.
+
 2010-04-15  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: For compatible with emacs-22.
